--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: cassandra zhou
-url: "https://cassandra-z.github.io"
+url: "https://runxinz.github.io"
 baseurl: ""  # Leave empty since your site will be at cassandra-z.github.io, not at a subdirectory
 markdown: kramdown
 #ins_logo: "./bits-logo.png"  # Uncomment if you want to add a logo
